Joomla! 3, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

15-Aug-2013 Jean-Marie Simonet
 # [#31744] Featured articles menu item error. Thanks Anthony THERREAU

14-Aug-2013 Jean-Marie Simonet
 # [#31692] JFormFieldUrl garble HTML with emtpy class. Thanks Anthony THERREAU
 #$ [#31631] Small typo fix in Plugin. Thanks Gunjan Patel
 $ [#31714] Confusing text "search by tag" in the banner module. Thanks Brian Teeman
 + [#31436] *Create a update button to list new Help servers. Thanks Julien Vonthron

12-Aug-2013 Jean-Marie Simonet
 # [#31703] Fixed BC issue with tooltip/popover being added in wrong place. Thanks Peter Van Westen
 $ [#31210] Add the "!" at the mod_menu.ini for the adminmenu "Help". Thanks Tobias Zulauf
 # [#31697] *Tags menu items: impossible to delete the last "Type". Thanks Roberto Segura.
 $ [#31365] Statistics Module 'Visitors' should be 'Registered users'. Thanks Stefania Gaianigo and Brian Teeman
 # [#30413] Calender popup problem in pages containing calendar fields. Thanks Achal Aggarwal
 # [#31658] correct header for some ini files. Thanks Tobias Zulauf
 # [#31695] Installation screen shows placeholder instead of email address. Thanks Achal Aggarwal

11-Aug-2013 Jean-Marie Simonet
 # Reverting #31697 which breaks installation.
 # [#31726] Saving with no tags gives sql error. Thanks Elin Waring

10-Aug-2013 Jean-Marie Simonet
 # [#31597] Undefined variable in com_banners model. Thanks Mario Proenca
 # [#31432] News Feed Manager: News Feed Page. --> System does not displayed the proper tootl tip. Thanks Sebastian Łuckoś
 # [#31685] No article Message does not Show on Blog category. Thanks Brian Teeman
 # [#31697] *Tags menu items: impossible to delete the last "Type". Thanks Achal Aggarwal

09-Aug-2013 Jean-Marie Simonet